Add support for Windows network paths to the UNC support in _bfd_real_open().

PR 31527